--- a/styles/style.css
+++ b/styles/style.css
@@ -25,8 +25,8 @@
   z-index: 2;
 }
 .header__title {
-  width: 730px;
-  margin-left: 64px;
+  max-width: 730px;
+  margin: 0 0 0 64px;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
@@ -34,7 +34,8 @@
 }
 .header__subtitle {
   position: absolute;
-  width: 388px;
+  margin: 0;
+  max-width: 388px;
   left: 64px;
   bottom: 30px;
   line-height: 25px;
@@ -47,6 +48,7 @@
   text-decoration: none;
 }
 .header__main-illustration {
+  object-fit: cover;
   height: 608px;
   width: 765px;
   position: absolute;
@@ -63,7 +65,6 @@
   right: 0;
 }
 .description {
-  position: relative;
   margin-top: 100px;
   display: flex;
   justify-content: center;
@@ -76,7 +77,7 @@
 .two-columns__brief {
   margin: 0;
   color: #2f80ed;
-  width: 175px;
+  max-width: 175px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -89,7 +90,6 @@
 }
 .two-columns__paragraph {
   margin: 0;
-  min-height: 30px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -149,18 +149,21 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin-bottom: 20px;
+  margin: 0 0 20px 0;
 }
 .feynman {
   position: relative;
   background: #f2f2f2;
-  height: 890px;
-  padding: 100px;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  min-height: 890px;
+  margin: 0;
+  padding-top: 100px;
   box-sizing: border-box;
 }
 .feynman__title {
-  position: relative;
-  width: 648px;
+  max-width: 648px;
   margin: 0 auto;
   text-align: center;
   line-height: 1.15;
@@ -169,8 +172,7 @@
   z-index: 1;
 }
 .feynman__subtitle {
-  position: relative;
-  margin-top: 70px;
+  margin: 70px 0 0 0;
   text-align: center;
   line-height: 51px;
   font-size: 36px;
@@ -181,17 +183,12 @@
   position: absolute;
   right: 48px;
   top: 50%;
-  transform: translateY(-50%);
   color: #2f80ed;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  text-decoration: none;
   z-index: 1;
-}
-.feynman__img {
-  position: absolute;
-  left: 0;
-  bottom: 0;
 }
 .kaufman {
   position: relative;
@@ -202,27 +199,23 @@
   align-items: center;
 }
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
   position: absolute;
   width: 877px;
   height: 877px;
+  top: 0;
   right: -210px;
 }
 .section-title_theme_dark {
-  width: 60%;
   margin-top: 90px;
-  color: white;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: 600;
+  color: #ffffff;
   z-index: 1;
 }
 .section-subtitle_theme_dark {
-  width: 60%;
   margin-top: 20px;
-  color: white;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
+  color: #ffffff;
   z-index: 1;
 }
 .table_theme_dark {
@@ -231,19 +224,8 @@
 }
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
-  margin-right: 0;
+  color: #ffffff;
   margin-top: 80px;
-}
-.table__heading_theme_dark {
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;
-}
-.table__text_theme_dark {
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
 }
 .footer{
   min-height: 350px;
@@ -257,25 +239,20 @@
   width: 90%;
   display: flex;
   justify-content: space-between;
-  color: white;
-  
+  color: #ffffff;
+  flex-direction: row;
 }
 .footer__columns_content_copyright {
   justify-content: space-between;
-  margin: 0;
-  flex-direction: column;
   flex-basis: 711px;
 }
 .footer__columns_content_info {
-  display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: auto;
 }
 .footer__columns_content_social {
   flex-direction: column;
   justify-content: flex-start;
-  width: auto;
 }
 .footer__autor {
   line-height: 25px;
@@ -284,7 +261,7 @@
   margin-top: 18px;
   margin-bottom: 18px;
 }
-.footer__column_heading {
+.footer__column-heading {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 30px;
@@ -301,7 +278,11 @@
   padding-left: 0;
 }
 .footer__column-link {
-  color: white;
-  list-style: none;
+  color: #ffffff;
   text-decoration: none;
+}
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
