--- a/styles/style.css
+++ b/styles/style.css
@@ -149,12 +149,13 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin: 0 0 20px 0;
+  margin: 20px 0 0 0;
 }
 .feynman {
   position: relative;
   background: #f2f2f2;
   background-image: url(../images/feynman.png);
+  background-size: 867px 637px;
   background-repeat: no-repeat;
   background-position: left bottom;
   min-height: 890px;
@@ -214,7 +215,6 @@
   z-index: 1;
 }
 .section-subtitle_theme_dark {
-  margin-top: 20px;
   color: #ffffff;
   z-index: 1;
 }
@@ -242,16 +242,18 @@
   color: #ffffff;
   flex-direction: row;
 }
-.footer__columns_content_copyright {
+.footer__column {
+  display: flex;
   justify-content: space-between;
+  flex-direction: column;
+}
+.footer__column_content_copyright {
   flex-basis: 711px;
 }
-.footer__columns_content_info {
-  flex-direction: column;
+.footer__column_content_info {
   justify-content: flex-start;
 }
-.footer__columns_content_social {
-  flex-direction: column;
+.footer__column_content_social {
   justify-content: flex-start;
 }
 .footer__autor {
