--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,8 @@
   min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-} 
-
+  font-family: "Helvetica Neue", Arial, sans-serif;
+}
 .header {
   height: 100vh;
   min-height: 600px;
@@ -96,7 +95,7 @@
 }
 .two-columns__paragraph:not(:last-child) {
   margin-bottom: 30px;
-} 
+}
 .two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
@@ -227,7 +226,7 @@
   color: #ffffff;
   margin-top: 80px;
 }
-.footer{
+.footer {
   min-height: 350px;
   background-color: #1f1f1f;
   display: flex;
